--- a/code/preprocessing.ipynb
+++ b/code/preprocessing.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-04-27 21:47:09.220039: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -13,9 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Done splitting train and test!>\n",
+      "<nlp train and test exported>\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import preprocess"
@@ -1267,15 +1285,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def get_data(train_file, test_file):\n",
+    "    \"\"\"\n",
+    "    Read and parse the train and test file line by line, then tokenize the sentences to build the train and test data separately.\n",
+    "    Create a vocabulary dictionary that maps all the unique tokens from your train and test data as keys to a unique integer value.\n",
+    "    Then vectorize your train and test data based on your vocabulary dictionary.\n",
+    "\n",
+    "    :param train_file: Path to the training file.\n",
+    "    :param test_file: Path to the test file.\n",
+    "    :return: Tuple of:\n",
+    "        train (1-d list or array with training words in vectorized/id form), \n",
+    "        test (1-d list or array with testing words in vectorized/id form), \n",
+    "        vocabulary (Dict containg index->word mapping)\n",
+    "    \"\"\"\n",
+    "    # Hint: You might not use all of the initialized variables depending on how you implement preprocessing. \n",
+    "    vocabulary, vocab_size, train_data, test_data = {}, 0, [], []\n",
+    "\n",
+    "    with open(train_file, 'r', encoding='utf-8') as file:\n",
+    "        for line in file:\n",
+    "            sentence_list = line.lower().split()\n",
+    "            for word in sentence_list:\n",
+    "                train_data.append(word)\n",
+    "    \n",
+    "    # built vocab list\n",
+    "    train_unique_words = sorted(set(train_data))\n",
+    "    vocabulary = {w:i for i, w in enumerate(train_unique_words)}\n",
+    "    vocabulary['<UNK>'] = len(vocabulary)\n",
+    "\n",
+    "    with open(test_file, 'r', encoding='utf-8') as file:\n",
+    "        for line in file:\n",
+    "            sentence_list = line.lower().split()\n",
+    "            for word in sentence_list:\n",
+    "                if word in vocabulary:  \n",
+    "                    test_data.append(word)\n",
+    "                else:\n",
+    "                    test_data.append('<UNK>')\n",
+    "    \n",
+    "    # Sanity Check, make sure there are no new words in the test data.\n",
+    "    assert reduce(lambda x, y: x and (y in vocabulary), test_data)\n",
+    "\n",
+    "    # Vectorize, and return output tuple.\n",
+    "    train_data = list(map(lambda x: vocabulary[x], train_data))\n",
+    "    test_data  = list(map(lambda x: vocabulary[x], test_data))\n",
+    "\n",
+    "    return train_data, test_data, vocabulary\n",
+    "\n",
+    "# split train and test data\n",
+    "\n",
+    "def split_train_test(data):\n",
+    "    size = data.shape[0]\n",
+    "    train_size = int(size * 0.8)\n",
+    "    train_indices = random.sample(range(size), train_size)\n",
+    "    train_data = data.iloc[train_indices]\n",
+    "\n",
+    "    all_indices = np.arange(data.shape[0])\n",
+    "    test_indices = np.setdiff1d(all_indices, train_indices)\n",
+    "    test_data = data.iloc[test_indices]\n",
+    "\n",
+    "    train_data.to_csv('../data/train.csv', index=True)\n",
+    "    test_data.to_csv('../data/test.csv', index=True)\n",
+    "\n",
+    "    print('<Done splitting train and test!>')\n",
+    "\n",
+    "    return train_data, test_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../data/train.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "File \u001b[0;32m<timed exec>:3\u001b[0m\n",
+      "File \u001b[0;32m~/Desktop/DLproject_game/code/preprocess.py:24\u001b[0m, in \u001b[0;36mget_data\u001b[0;34m(train_file, test_file)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m# Hint: You might not use all of the initialized variables depending on how you implement preprocessing. \u001b[39;00m\n\u001b[1;32m     22\u001b[0m vocabulary, vocab_size, train_data, test_data \u001b[38;5;241m=\u001b[39m {}, \u001b[38;5;241m0\u001b[39m, [], []\n\u001b[0;32m---> 24\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtrain_file\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mutf-8\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[1;32m     25\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m file:\n\u001b[1;32m     26\u001b[0m         sentence_list \u001b[38;5;241m=\u001b[39m line\u001b[38;5;241m.\u001b[39mlower()\u001b[38;5;241m.\u001b[39msplit()\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../data/train.txt'"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
     "import rnn\n",
     "\n",
-    "train_id, test_id, vocab = preprocess.get_data(\"../data/train.txt\", \"../data/test.txt\")\n",
+    "train_id, test_id, vocab = preprocess.get_data(\"../data/nlp_train.txt\", \"../data/nlp_test.txt\")\n",
     "\n",
     "train_id = np.array(train_id)\n",
     "test_id  = np.array(test_id)\n",
@@ -1296,6 +1398,13 @@
     "Y1 = process_data(20, Y1)\n",
     "print(X0.shape, Y0.shape)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
